# openenv

./: .replit  Dockerfile  pnpm-lock.yaml  pyproject.toml  replit.md  start_server.py
artifacts/api-server/src/: app.ts
artifacts/api-server/src/routes/: index.ts  openenv-proxy.ts
artifacts/openenv-datacleaning/: Dockerfile  README.md  SUBMISSION_STATUS.md  inference.py  openenv.yaml  pyproject.toml
artifacts/openenv-datacleaning/src/openenv_datacleaning/: __init__.py  actions.py  client.py  env.py  models.py  server.py  tasks.py  validator.py
artifacts/openenv-datacleaning/src/openenv_datacleaning.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
artifacts/openenv-datacleaning/tests/: test_env.py
artifacts/openenv-ui/: index.html  package.json
artifacts/openenv-ui/.replit-artifact/: artifact.toml
artifacts/openenv-ui/src/: App.tsx  index.css
attached_assets/: Pasted--Inference-Script-Example-MANDATORY-Before-submitting-e_1775018952419.txt  Pasted--validate-submission-sh-OpenEnv-Submission-Validator-Ch_1775018929077.txt  Pasted-Build-a-complete-real-world-OpenEnv-environment-that-an_1775018979104.txt  Pasted-OpenEnv-Production-RL-Made-Simple-PyTorch-From-Hello-Wo_1775636740489.txt
