[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-datacleaning"
version = "1.0.0"
description = "OpenEnv data cleaning environment for AI agent evaluation"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "openai>=1.55.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.28.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
openenv-datacleaning = "openenv_datacleaning.server:main"
